--- a/realmfit/src/main/res/values/strings.xml
+++ b/realmfit/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RealmFit</string>
     <string name="expanded">expanded: %s</string>
     <string name="collapsed">collapsed: %s</string>
+    <string name="spinner_prompt_plangoal">Plan goal</string>
 </resources>
